# wcs2kml

./: COPYING  HowToShareKML.md  Makefile  Makefile.in  MaskingInfo.md  ProjectHome.md  README  UsageInfo.md  base.h  boundingbox-inl.h  boundingbox.cc  boundingbox.h  boundingbox_test.cc  color.cc  color.h  color_test.cc  configure  fits.cc  fits.h  fits_test.cc  image.cc  image.h  image_test.cc  kml.cc  kml.h  kml_test.cc  mask.cc  mask_test.cc  regionator.cc  regionator.h  regionator_test.cc  skyprojection.h  string_util.cc  string_util.h  stringprintf.cc  stringprintf.h  stringprintf_test.cc  uint8.h  wcsprojection.cc  wcsprojection.h  (+4 more)
libwcs/: Makefile  Makefile.normal  binread.c  fitsfile.h  fitswcs.c  sdssread.c  ujcread.c
python/: fitsimage.py  fitslib.py  setup.py
python/fits/: __init__.py  fitsparse.py  fitsregionator.py
python/scripts/: README  ext2fits.py  fits2kml.py  fits2png.py  regionated_dir_compressor.py  wcs2fits.py
src/: Makefile.am  Makefile.in
src/google/: Makefile.am  Makefile.in  Makefile.normal  boundingbox-inl.h  boundingbox.cc  boundingbox_test.cc  color.h  config.h.in  fits.cc  fits.h  kml.cc  kml.h  kml_test.cc  mask.cc  mask_test.cc  pngimage.cc  pngimage.h  pngimage_test.cc  regionator.cc  regionator.h  regionator_test.cc  skyprojection.cc  skyprojection.h  skyprojection_test.cc  wcs2kml.cc  wcsprojection.cc  wcsprojection_test.cc  wraparound.h  wraparound_test.cc
src/google/libwcs/: Makefile.am  catutil.c  imgetwcs.c  tabread.c  ubcread.c  wcs.c
testdata/: fits_test.fits  fpC-001478-g3-0022_small.fits
trunk/: COPYING  Makefile  Makefile.am  Makefile.in  README  autogen.sh  base.cc  boundingbox.cc  boundingbox.h  boundingbox_test.cc  color.cc  color_test.cc  configure  configure.ac  fits.cc  fits.h  fits_test.cc  image.cc  image.h  image_test.cc  kml.cc  kml.h  mask.cc  mask.h  mask_test.cc  regionator.cc  regionator_test.cc  run_tests.py  skyprojection.cc  skyprojection.h  skyprojection_test.cc  string_util.cc  string_util_test.cc  stringprintf.cc  stringprintf.h  uint8.h  wcs2kml.cc  wcsprojection.cc  wcsprojection.h  wcsprojection_test.cc  (+2 more)
trunk/libwcs/: ctgread.c  gsc2read.c  hput.c  ty2read.c  wcs.h  wcsinit.c
trunk/python/: README  fitsimage.py  fitslib.py  setup.py  wcslib.py
trunk/python/fits/: fitsparse.py
trunk/python/scripts/: ext2fits.py  fits2png.py  regionate_fits.py  wcs2fits.py  wcs2kml.py
trunk/src/: Makefile.in  config.h.in
trunk/src/google/: Makefile.am  Makefile.in  Makefile.normal  boundingbox.h  color.cc  color.h  color_test.cc  fits.cc  fits.h  fits_test.cc  kml.h  kml_test.cc  mask.cc  mask.h  mask_test.cc  pngimage.cc  pngimage.h  pngimage_test.cc  regionator.cc  regionator.h  skyprojection.cc  skyprojection.h  stringprintf.cc  stringprintf.h  stringprintf_test.cc  uint8.h  wcs2kml.cc  wcsprojection.h  wcsprojection_test.cc
trunk/src/google/libwcs/: Makefile.am  Makefile.in  NEWS  gscread.c  hget.c  tmcread.c  ucacread.c  wcscat.h  webread.c
wiki/: HowToShareKML.wiki  MaskingInfo.wiki  UsageInfo.wiki
